<resources>
    <string name="app_name">CootieCatcher</string>
    <string name="settings_button">Settings</string>
    <string name="contact_us_button">Contact Us</string>
    <string name="post_idea_button">Post Idea</string>
    <string name="about_us_button">About Us</string>
    <string name="about_us_yes">Cool</string>
    <string name="about_us_msg">Anna Billstrom made this with the help of her older sister Jennifer Huber.</string>
    <string name="forums_button">Discuss Cootie!</string>
    <string name="fortunes_button">Fortunes</string>
    <string name="save_fortune_btn">Save</string>
    <string name="clear_fortune_btn">Clear</string>
    <string name="again_button">Again</string>
</resources>
