<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me_jenny"
    >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fortunes_button"
        android:onClick="viewFortunes"
        android:layout_marginTop="20dp"
        />



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_button"
        android:onClick="contactUs"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_idea_button"
        android:onClick="postIdea"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/forums_button"
        android:onClick="getForums"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_button"
        android:onClick="viewAbout"
        android:layout_marginTop="20dp"
        />
</LinearLayout>